--- a/jogoquadradinho.html
+++ b/jogoquadradinho.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Jogo do Quadrado</title>
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js"></script>
   <script>
@@ -17,31 +18,88 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
   </script>
+
   <style>
-    body { background: #1a1a1a; color: #fff; font-family: sans-serif; text-align: center; }
-    #localjogo { width: 400px; height: 400px; background: #3d3d3d; border: 2px solid white; margin: auto; position: relative; }
-    .square { width: 50px; height: 50px; position: absolute; cursor: pointer; }
-    #quadrado { background: red; }
-    #quadradofake { background: darkred; }
-    #quadradogol { background: gold; display: none; }
-    #quadradonight { background: blue; display: none; }
+    #tabelaRegras {
+  position: absolute;
+  top: 20%;
+  right: 5%;
+  width: 200px;
+  padding: 15px;
+  background-color: #2d2d2d;
+  border: 2px solid #e0c000;
+  border-radius: 10px;
+  color: white;
+}
+#tabelaRegras table {
+  width: 100%;
+  border-spacing: 5px;
+}
+#tabelaRegras td {
+  padding: 5px;
+  font-size: 14px;
+}
+    body {
+      background: #1a1a1a;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+    }
+    #localjogo {
+      width: 400px;
+      height: 400px;
+      background: #3d3d3d;
+      border: 2px solid white;
+      margin: auto;
+      position: relative;
+    }
+    .square {
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      cursor: pointer;
+    }
+    #quadrado { background-color: red; }
+    #quadradofake { background-color: darkred; }
+    #quadradogol { background-color: gold; display: none; }
+    #quadradonight { background-color: blue; display: none; }
+
     #menp {
-      position: absolute; top: 55%; left: 5%;
-      width: 200px; height: 140px;
-      background: #3d3d3d; border: 2px solid #fff;
+      position: absolute;
+      top: 55%;
+      left: 5%;
+      width: 200px;
+      height: 140px;
+      background-color: #3d3d3d;
+      border: 2px solid white;
+      overflow-y: auto;
     }
     .mensagemclass {
-      font-size: 18px; margin: 5px; font-weight: bold;
+      font-size: 18px;
+      margin: 5px;
+      font-weight: bold;
       animation: bule 0.5s;
     }
     @keyframes bule { from { opacity: 0; } to { opacity: 1; } }
     @keyframes cafe { from { opacity: 1; } to { opacity: 0; } }
     .cafe { animation: cafe 1s forwards; }
-    #ranking { margin-top: 20px; }
+
+    #painelRanking {
+      margin-top: 30px;
+    }
+    ul { list-style: none; padding: 0; }
+    li {
+      margin: 5px;
+      background: #2d2d2d;
+      padding: 10px;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
-
+<a href="ranking.html"><button>Ver Ranking Completo</button></a>
   <h1>Jogo do Quadrado</h1>
   <p>Clique nos quadrados para pontuar!</p>
   <p>Recorde: <span id="recorde">0</span></p>
@@ -56,7 +114,20 @@
   </div>
 
   <button onclick="finalizar()">Finalizar partida</button>
-  <a href="ranking.html" target="_blank"><button>Ver Ranking</button></a>
+
+  <div id="painelRanking">
+    <h2>Últimos Recordes</h2>
+    <ul id="rankingInterno"></ul>
+    <div id="tabelaRegras">
+  <h3>Regras do Jogo</h3>
+  <table>
+    <tr><td style="color: lightcoral;">🔴 Vermelho</td><td>+1 ponto</td></tr>
+    <tr><td style="color: red;">🟥 Falso</td><td>-1 ponto</td></tr>
+    <tr><td style="color: gold;">🟡 Dourado</td><td>+5 pontos</td></tr>
+    <tr><td style="color: cyan;">🔵 Azul</td><td>+10 pontos (1% de chance)</td></tr>
+  </table>
+</div>
+  </div>
 
   <script>
     let score = 0;
@@ -77,16 +148,20 @@
         q.style.top = Math.random() * maxY + "px";
       });
 
-      quadradogol.style.display = Math.random() < 0.1 ? "block" : "none";
-      if (quadradogol.style.display === "block") {
+      if (Math.random() < 0.1) {
+        quadradogol.style.display = "block";
         quadradogol.style.left = Math.random() * maxX + "px";
         quadradogol.style.top = Math.random() * maxY + "px";
+      } else {
+        quadradogol.style.display = "none";
       }
 
-      quadradonight.style.display = Math.random() < 0.01 ? "block" : "none";
-      if (quadradonight.style.display === "block") {
+      if (Math.random() < 0.01) {
+        quadradonight.style.display = "block";
         quadradonight.style.left = Math.random() * maxX + "px";
         quadradonight.style.top = Math.random() * maxY + "px";
+      } else {
+        quadradonight.style.display = "none";
       }
     }
 
@@ -119,31 +194,46 @@
 
     quadradogol.onclick = () => {
       score += 5;
-      quadradogol.style.display = "none";
       recordeEl.textContent = score;
+      quadradogol.style.display = "none";
       scorenews("+5 pontos (dourado)!", "gold");
       moverQuadrados();
     };
 
     quadradonight.onclick = () => {
       score += 10;
-      quadradonight.style.display = "none";
       recordeEl.textContent = score;
+      quadradonight.style.display = "none";
       scorenews("+10 pontos (azul)!", "cyan");
       moverQuadrados();
     };
 
     function finalizar() {
-      const nome = prompt("Qual seu nome?");
+      const nome = prompt("Digite seu nome:");
       if (!nome) return;
       const data = new Date().toLocaleString();
       db.ref("ranking").push({ nome, pontos: score, data });
+      scorenews("Pontuação salva!", "lightgreen");
       score = 0;
       recordeEl.textContent = "0";
-      scorenews("Pontuação enviada!", "lightgreen");
+      mostrarRankingInterno();
+    }
+
+    function mostrarRankingInterno() {
+      db.ref("ranking").limitToLast(15).once("value", (snapshot) => {
+        const ul = document.getElementById("rankingInterno");
+        ul.innerHTML = "";
+        const registros = Object.values(snapshot.val() || {}).sort((a, b) => b.pontos - a.pontos);
+        registros.forEach(j => {
+          const li = document.createElement("li");
+          li.textContent = `${j.nome} — ${j.pontos} pontos — ${j.data}`;
+          ul.appendChild(li);
+        });
+      });
     }
 
     moverQuadrados();
+    mostrarRankingInterno();
   </script>
 </body>
 </html>
