--- a/jogodoquadrado.html
+++ b/jogodoquadrado.html
@@ -1,1 +1,244 @@
+<!DOCTYPE html>
+<head>
+    <title>Jogo do quadrado</title>
+</head>
+<body>
+    <div class="texto">
+    <h1>Jogo do quadrado</h1>
+    <p>Clique no quadrado para obter pontos!</p>
+    </div>
+    <p class="rec">Recorde: <span id="recorde">0</span></p>
+    <div id="menp"></div>
+    <div id="localjogo">
+        <div id="quadrado"></div>
+        <div id="quadradofake"></div>
+        <div id="quadradogol"></div>
+        <div id="quadradonight"></div>
+    </div>
+    <div id="regras">Regras</div>
+    <div class="abarules">
+        <h2>Quadrados</h2>
+        <p>esse quadrado<span class=real></span> da um ponto</p>
+        <p>esse quadrado <span class=fake></span> da menos um ponto</p>
+        <p>esse quadrado<span class=oro></span> da cinco pontos</p>
+        <p>Existem outros quadrados especiais...</p>
+    </div>
+</body>
+<style>
+        body {
+            text-align: center;
+            font-family: sans-serif;
+            background-color: rgb(26, 26, 26);
+        }
+        .real{
+            width:20px;
+            height:20px;
+            background-color: rgb(239, 0, 0);
+        }
+        .fake{
+            width:20px;
+            height:20px;
+            background-color: rgb(203, 0, 0);
+        }
+        .oro{
+            width:20px;
+            height:20px;
+            background-color: rgb(241, 251, 62);
+        }
+        .real, .fake, .oro {
+            display: inline-block;
+            margin-left: 10px;
+            margin-right: 10px;
+            vertical-align: middle;
+        }
+        .rec{
+            font-size: 25px;
+            color: rgb(255, 255, 255);
+        }
+        #localjogo {
+            width: 400px;
+            height: 400px;
+            border: 2px solid rgb(251, 251, 251);
+            position: relative;
+            margin: auto;
+            background-color: rgb(61, 61, 61);
+        }
+        #quadrado {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(239, 0, 0);
+            position: absolute;
+            cursor: pointer;
+        }
+        #quadradofake {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(203, 0, 0);
+            position: absolute;
+            cursor: pointer;
+        }
+        #quadradogol {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(241, 251, 62);
+            position: absolute;
+            cursor: pointer;
+            display: none;
+        }
+        #quadradonight{
+            width: 50px;
+            height: 50px;
+            background-color: rgb(2, 26, 141);
+            position: absolute;
+            cursor: pointer;
+            display: none;
+        }
+        #recorde {
+            color: rgb(64, 128, 255);
+        }
+        .texto {
+            color: rgb(255, 255, 255);
+        }
+        .informacoes {
+            color: rgb(253, 253, 224);
+        }
+        #regras {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            left: 75%;
+            top: 80%;
+            width: 100px;
+            height: 50px;
+            background-color: rgb(55, 55, 55);
+            color: rgb(255, 255, 255);
+            border: solid rgb(255, 255, 255) 3px;
+            cursor: pointer;
+        }
+        .abarules {
+            display: none;
+            position: absolute;
+            top: 18%;
+            left: 67%;
+            width: 400px;
+            height: 400px;
+            background-color: rgb(46, 40, 40);
+            border: 3px solid rgb(221, 188, 0);
+            color:rgb(233, 233, 233);
+        }
+        #menp {
+            position: absolute;
+            top: 55%;
+            left: 5%;
+            width: 200px;
+            height: 140px;
+            border: 2px solid rgb(251, 251, 251);
+            background-color: rgb(61, 61, 61);
+        }
+        .mensagemclass {
+            font-size: 18px;
+            margin: 5px;
+            font-weight: bold;
+            animation: bule 0.5s;
+        }
+        @keyframes bule {
+            from { opacity: 0;}
+            to { opacity: 1;}
+        }
+        @keyframes cafe {
+            from { opacity: 1;}
+            to { opacity: 0;}
+        }
+        .cafe {
+            animation: cafe 1s forwards;
+        }
+</style>
+<script>
+        let score = 0;
+        const pontuacaom = document.getElementById("recorde");
+        const localdjogo = document.getElementById("localjogo");
+        const quadrador = document.getElementById("quadrado");
+        const falsequadrador = document.getElementById("quadradofake");
+        const quadradoSpecial = document.getElementById("quadradogol");
+        const quadradonightmare = document.getElementById("quadradonight")
 
+        function movimentoquadrados() {
+        const maxX = localdjogo.clientWidth - quadrador.clientWidth;
+        const maxY = localdjogo.clientHeight - quadrador.clientHeight;
+        quadrador.style.left = Math.floor(Math.random() * maxX) + "px";
+        quadrador.style.top = Math.floor(Math.random() * maxY) + "px";
+        falsequadrador.style.left = Math.floor(Math.random() * maxX) + "px";
+        falsequadrador.style.top = Math.floor(Math.random() * maxY) + "px";
+
+        if (Math.random() < 0.09) { 
+        quadradoSpecial.style.display = "block";
+        quadradoSpecial.style.left = Math.floor(Math.random() * maxX) + "px";
+        quadradoSpecial.style.top = Math.floor(Math.random() * maxY) + "px";
+    } 
+        else {
+        quadradoSpecial.style.display = "none";
+    }
+    if (Math.random() < 0.05 && score >= 50) { 
+        quadradonightmare.style.display = "block";
+        quadradonightmare.style.left = Math.floor(Math.random() * maxX) + "px";
+        quadradonightmare.style.top = Math.floor(Math.random() * maxY) + "px";
+    } 
+        else {
+        quadradonightmare.style.display = "none";
+    }
+        }
+        quadrador.addEventListener("click", () => {
+        score += 1;
+        pontuacaom.textContent = score;
+        scorenews("+1 ponto!", "lightcoral");
+        movimentoquadrados();
+    });
+        falsequadrador.addEventListener('click', () => {
+        score -= 1;
+        pontuacaom.textContent = score;
+        scorenews("-1 ponto!", "red");
+        movimentoquadrados();
+    });
+        quadradoSpecial.addEventListener("click", () => {
+        score += 5;
+        pontuacaom.textContent = score;
+        quadradoSpecial.style.display = "none";
+        scorenews("+5 pontos, Quadrado dourado!", "gold");
+        movimentoquadrados();
+    });
+        quadradonightmare.addEventListener("click", () => {
+        score += 10;
+        pontuacaom.textContent = score;
+        quadradonightmare.style.display = "none";
+        scorenews("+10 pontos, Quadrado nightmare.", "darkcyan");
+        movimentoquadrados();
+    });
+
+     movimentoquadrados();
+    
+    document.getElementById("regras").addEventListener("click", function() {
+    const rulesbox= document.querySelector(".abarules");
+    if (rulesbox.style.display === "block") {
+        rulesbox.style.display = "none";
+    } else {
+        rulesbox.style.display = "block";
+    }
+});
+
+function scorenews(texto, cor = "white") {
+    const menpd = document.getElementById("menp");
+    const newsc = document.createElement("div");
+    newsc.textContent = texto;
+    newsc.style.color = cor;
+    newsc.classList.add("mensagemclass");
+    menpd.appendChild(newsc);
+
+    setTimeout(() => {
+        newsc.classList.add("cafe");
+        setTimeout(() => {
+        newsc.remove();
+       }, 1000);
+    }, 2000); 
+}
+</script>
